--- a/MessagePack.Contractless.Subtypes.Tests/MessagePack.Contractless.Subtypes.Tests.csproj
+++ b/MessagePack.Contractless.Subtypes.Tests/MessagePack.Contractless.Subtypes.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoBogus" Version="2.13.0" />
+    <PackageReference Include="AutoBogus.Conventions" Version="2.13.0" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
