--- a/MessagePack.Contractless.Subtypes.Tests/MessagePack.Contractless.Subtypes.Tests.csproj
+++ b/MessagePack.Contractless.Subtypes.Tests/MessagePack.Contractless.Subtypes.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ApprovalTests" Version="5.5.0" />
     <PackageReference Include="AutoBogus" Version="2.13.0" />
     <PackageReference Include="AutoBogus.Conventions" Version="2.13.0" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
