--- a/MessagePack.Attributeless.Tests/MessagePack.Attributeless.Tests.csproj
+++ b/MessagePack.Attributeless.Tests/MessagePack.Attributeless.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -11,6 +11,7 @@
     <PackageReference Include="AutoBogus" Version="2.13.0" />
     <PackageReference Include="AutoBogus.Conventions" Version="2.13.0" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="ModernRonin.FluentArgumentParser" Version="1.0.0" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
