--- a/MessagePack.Attributeless.Tests/MessagePack.Attributeless.Tests.csproj
+++ b/MessagePack.Attributeless.Tests/MessagePack.Attributeless.Tests.csproj
@@ -1,24 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
 
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="ApprovalTests" Version="5.5.0" />
-    <PackageReference Include="AutoBogus" Version="2.13.0" />
-    <PackageReference Include="AutoBogus.Conventions" Version="2.13.0" />
-    <PackageReference Include="FluentAssertions" Version="5.10.3" />
-    <PackageReference Include="ModernRonin.FluentArgumentParser" Version="1.0.0" />
-    <PackageReference Include="NUnit" Version="3.13.2" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="ApprovalTests" Version="5.5.0" />
+		<PackageReference Include="AutoBogus" Version="2.13.0" />
+		<PackageReference Include="AutoBogus.Conventions" Version="2.13.0" />
+		<PackageReference Include="FluentAssertions" Version="5.10.3" />
+		<PackageReference Include="ModernRonin.FluentArgumentParser" Version="1.0.0" />
+		<PackageReference Include="NUnit" Version="3.13.2" />
+		<PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\MessagePack.Attributeless\MessagePack.Attributeless.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\MessagePack.Attributeless\MessagePack.Attributeless.csproj" />
+	</ItemGroup>
 
+	<PropertyGroup>
+		<DefaultItemExcludes>$(DefaultItemExcludes);*.received</DefaultItemExcludes>
+	</PropertyGroup>
 </Project>
