--- a/MessagePack.Attributeless.Tests/MessagePack.Attributeless.Tests.csproj
+++ b/MessagePack.Attributeless.Tests/MessagePack.Attributeless.Tests.csproj
@@ -12,6 +12,7 @@
 		<PackageReference Include="AutoBogus.Conventions" Version="2.13.0" />
 		<PackageReference Include="FluentAssertions" Version="5.10.3" />
 		<PackageReference Include="ModernRonin.FluentArgumentParser" Version="1.0.0" />
+		<PackageReference Include="morelinq" Version="3.3.2" />
 		<PackageReference Include="NUnit" Version="3.13.2" />
 		<PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
