added release history

--- a/MessagePack.Attributeless/MessagePack.Attributeless.csproj
+++ b/MessagePack.Attributeless/MessagePack.Attributeless.csproj
@@ -8,4 +8,5 @@
     <PackageReference Include="MessagePack" Version="2.2.85" />
   </ItemGroup>
 
+    <Import Project="release.history"/>
 </Project>
