updated nugets packages and adjusted to changes

--- a/MessagePack.Attributeless/MessagePack.Attributeless.csproj
+++ b/MessagePack.Attributeless/MessagePack.Attributeless.csproj
@@ -23,14 +23,16 @@
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<RunAnalyzersDuringBuild>False</RunAnalyzersDuringBuild>
+		<RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
 	</PropertyGroup>
 
 
 	<ItemGroup>
-		<PackageReference Include="MessagePack" Version="2.2.85" />
+		<PackageReference Include="MessagePack" Version="2.3.85" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
 	</ItemGroup>
 
 	<Import Project="release.history" />
