--- a/MessagePack.Attributeless.Microbenchmark/MessagePack.Attributeless.Microbenchmark.csproj
+++ b/MessagePack.Attributeless.Microbenchmark/MessagePack.Attributeless.Microbenchmark.csproj
@@ -3,11 +3,14 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <Nullable>disable</Nullable>
+    <RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
+    <RunAnalyzersDuringBuild>False</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoBogus" Version="2.13.0" />
-    <PackageReference Include="AutoBogus.Conventions" Version="2.13.0" />
+    <PackageReference Include="AutoBogus" Version="2.13.1" />
+    <PackageReference Include="AutoBogus.Conventions" Version="2.13.1" />
     <PackageReference Include="JsonSubTypes" Version="1.8.0" />
     <PackageReference Include="ModernRonin.FluentArgumentParser" Version="1.0.0" />
   </ItemGroup>
