--- a/MessagePack.Attributeless.Tests/MessagePack.Attributeless.Tests.csproj
+++ b/MessagePack.Attributeless.Tests/MessagePack.Attributeless.Tests.csproj
@@ -7,15 +7,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="ApprovalTests" Version="5.5.0" />
-		<PackageReference Include="AutoBogus" Version="2.13.0" />
-		<PackageReference Include="AutoBogus.Conventions" Version="2.13.0" />
-		<PackageReference Include="FluentAssertions" Version="5.10.3" />
+		<PackageReference Include="ApprovalTests" Version="5.7.1" />
+		<PackageReference Include="AutoBogus" Version="2.13.1" />
+		<PackageReference Include="AutoBogus.Conventions" Version="2.13.1" />
+		<PackageReference Include="FluentAssertions" Version="6.3.0" />
 		<PackageReference Include="ModernRonin.FluentArgumentParser" Version="1.0.0" />
 		<PackageReference Include="morelinq" Version="3.3.2" />
 		<PackageReference Include="NUnit" Version="3.13.2" />
-		<PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.2.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -24,5 +24,8 @@
 
 	<PropertyGroup>
 		<DefaultItemExcludes>$(DefaultItemExcludes);*.received</DefaultItemExcludes>
+		<Nullable>disable</Nullable>
+		<RunAnalyzersDuringBuild>False</RunAnalyzersDuringBuild>
+		<RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
 	</PropertyGroup>
 </Project>
