--- a/MessagePack.Attributeless/MessagePack.Attributeless.csproj
+++ b/MessagePack.Attributeless/MessagePack.Attributeless.csproj
@@ -36,6 +36,18 @@
 		<PackageReference Include="System.CodeDom" Version="6.0.0" />
 	</ItemGroup>
 	<ItemGroup>
+	  <None Update="CodeGeneration\AFormatterTemplate.tt">
+	    <Generator>TextTemplatingFilePreprocessor</Generator>
+	    <LastGenOutput>AFormatterTemplate.cs</LastGenOutput>
+	  </None>
+	  <None Update="CodeGeneration\BaseTypeTemplate.tt">
+	    <Generator>TextTemplatingFilePreprocessor</Generator>
+	    <LastGenOutput>BaseTypeTemplate.cs</LastGenOutput>
+	  </None>
+	  <None Update="CodeGeneration\ConcreteTypeTemplate.tt">
+	    <Generator>TextTemplatingFilePreprocessor</Generator>
+	    <LastGenOutput>ConcreteTypeTemplate.cs</LastGenOutput>
+	  </None>
 	  <None Update="CodeGeneration\EnumFormatterTemplate.tt">
 	    <Generator>TextTemplatingFilePreprocessor</Generator>
 	    <LastGenOutput>EnumFormatterTemplate.cs</LastGenOutput>
@@ -45,6 +57,21 @@
 	  <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Compile Update="CodeGeneration\AFormatterTemplate.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>AFormatterTemplate.tt</DependentUpon>
+	  </Compile>
+	  <Compile Update="CodeGeneration\BaseTypeTemplate.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>BaseTypeTemplate.tt</DependentUpon>
+	  </Compile>
+	  <Compile Update="CodeGeneration\ConcreteTypeTemplate.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>ConcreteTypeTemplate.tt</DependentUpon>
+	  </Compile>
 	  <Compile Update="CodeGeneration\EnumFormatterTemplate.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
