added liquid and templates for it

--- a/MessagePack.Attributeless/MessagePack.Attributeless.csproj
+++ b/MessagePack.Attributeless/MessagePack.Attributeless.csproj
@@ -29,6 +29,7 @@
 
 
 	<ItemGroup>
+		<PackageReference Include="Fluid.Core" Version="2.2.14" />
 		<PackageReference Include="MessagePack" Version="2.3.85" />
 	</ItemGroup>
 	<ItemGroup>
@@ -86,6 +87,17 @@
 	    <AutoGen>True</AutoGen>
 	    <DependentUpon>ResolverTemplate.tt</DependentUpon>
 	  </Compile>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
 	</ItemGroup>
 
 	<Import Project="release.history" />
