--- a/MessagePack.Attributeless.CompileTime.IntegrationTests/MessagePack.Attributeless.CompileTime.IntegrationTests.csproj
+++ b/MessagePack.Attributeless.CompileTime.IntegrationTests/MessagePack.Attributeless.CompileTime.IntegrationTests.csproj
@@ -1,25 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>disable</Nullable>
 		<IsPackable>false</IsPackable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<DefaultItemExcludes>$(DefaultItemExcludes);*.received</DefaultItemExcludes>
-		<RunAnalyzersDuringBuild>False</RunAnalyzersDuringBuild>
-		<RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
+		<RunAnalyzersDuringBuild>True</RunAnalyzersDuringBuild>
+		<RunAnalyzersDuringLiveAnalysis>True</RunAnalyzersDuringLiveAnalysis>
 	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="ApprovalTests" Version="5.7.1" />
 		<PackageReference Include="FluentAssertions" Version="6.3.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis" Version="4.0.1" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing.NUnit" Version="1.1.0" />
 		<PackageReference Include="morelinq" Version="3.3.2" />
 		<PackageReference Include="NUnit" Version="3.13.2" />
 		<PackageReference Include="NUnit3TestAdapter" Version="4.2.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\MessagePack.Attributeless.CompileTime\MessagePack.Attributeless.CompileTime.csproj"/>
-	  <ProjectReference Include="..\MessagePack.Attributeless.Tests\MessagePack.Attributeless.Tests.csproj" />
+		<ProjectReference Include="..\MessagePack.Attributeless.CompileTime\MessagePack.Attributeless.CompileTime.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+		<ProjectReference Include="..\MessagePack.Attributeless.Tests\MessagePack.Attributeless.Tests.csproj" />
 	</ItemGroup>
 
 </Project>
